alot of chenge in css and code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  <div id="logo">
+    <img src="./styles/images/BATTLESHIP_Logo.png" alt="">
+  </div>
+  
   <section id="container">
     <section id="form_holder">
       <form>
