--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
           <div><label for="s4">battleships for size 4</label><input id="s4" type="number" value="0"></div>
           <div><label for="s5">battleships for size 5</label><input id="s5" type="number" value="0"></div>
         </div>
-        <button>START</button>
+        <button class="button">
+        <p>START</p>
+       </button>
       </form>
     </section>
+  
     <section id="board_holder">
       <section id="board"></section>
     </section>
