--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <div id="logo">
     <img src="./styles/images/BATTLESHIP_Logo.png" alt="">
   </div>
+
+  <div id="boomEffect">
+  </div>
   
   <section id="container">
     <section id="form_holder">
@@ -63,6 +66,8 @@
     </section>
     <section id="table_holder"></section>
   </section>
+
+  <audio id="boom" src="./styles/Sounds/BoomSound.mp3"></audio>
 </body>
 
 </html>
